<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Gmail Notifier</string>
    <string name="interval">Repeat interval</string>
    <string name="interval_summary">How often a notification should repeat</string>
    <string name="repeats">Max. repeat count</string>
    <string name="repeats_summary">Maximum number of times a notification can repeat</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_summary">Played when email arrives</string>
	<string name="vibrationmode">Vibration mode</string>
	<string name="vibrationmode_summary">How to vibrate when email arrives</string>
	<string name="vibrateoncall">Vibrate during calls</string>
	<string name="vibrateoncall_summary">Enable to allow vibration while during phone calls</string>
	<string name="prefs">Configure</string>
	<string name="test">Test</string>
	<string name="donate">Donate</string>
	<string name="enabled">Notifications enabled</string>
	<string name="prefs_title">Settings</string>
	<string name="cat_priority">Priority Inbox</string>
	<string name="cat_invisible">Invisible properties</string>
	<string name="cat_visible">Visible properties</string>
	<string name="cat_schedule">Scheduling</string>
	<string name="priority">Use Priority Inbox</string>
	<string name="priority_summary">Enable to notify only for messages in your Priority Inbox</string>
	<string name="visible">Visible notifications</string>
	<string name="visible_summary">Replaces Gmail notifications in status bar</string>
	<string name="nicon">Notification icon</string>
	<string name="nicon_summary">Icon shown in status bar</string>
	<string name="gmstylefirst">Gmail style notifications</string>
	<string name="gmstylefirst_summary">Show subject and sender for single unread mail</string>
	<string name="gmstylefirstm">... for multiple unread</string>
    <string name="gmstylefirstm_summary">Show subject and sender for first unread mail together with total unread count</string>
	<string name="ledmode">LED mode</string>
	<string name="ledmode_summary">Use test feature to ensure hardware support</string>
	<string name="ledcolor">LED color</string>
	<string name="ledcolor_summary">Use test feature to ensure hardware support</string>	
	<string name="notificationtitle">New email</string>
	<string name="notificationticker">New email</string>
	<string name="notificationtitle_test">New email (test)</string>
	<string name="testfailed">Notification test failed</string>
	<string name="testsuccess">Test notification sent</string>
	<string name="selectaccount">Select account</string>
	<string name="testaccount">test@gmail.com</string>
	<string name="unreadcount">unread count</string>
	<string name="me">Me</string>
	<string name="draft">Draft</string>
	<string name="draftplural">Drafts</string>
	<string name="sending">Sending</string>
	<string name="sendingfailed">Failed</string>	
	<string name="custom">Custom</string>
	<string name="custom_vibration">Custom vibration</string>
	<string name="custom_vibration_summary">Format: millisOff, millsOn, etc.\n\nExample:\n0,1500\n0,500,1000,500,1000</string>
	<string name="schedule">Enabled</string>
	<string name="schedule_summary">Enables scheduled disabling of properties for new notifications</string>
	<string name="schedulestart">Disable from ...</string>
	<string name="schedulestop">Disable to ...</string>
	<string name="schedulering">Disable ringtone</string>
	<string name="schedulevibration">Disable vibration</string>
	<string name="scheduleled">Disable LED</string>
</resources>
