<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">  
    <PreferenceCategory android:title="@string/cat_invisible">
        <RingtonePreference
            android:title="@string/ringtone"
            android:key="ringtone"
            android:summary="@string/ringtone_summary"
            android:defaultValue="content://settings/system/notification_sound"
            android:showDefault="true"
            android:showSilent="true"        
            android:ringtoneType="notification"        
            />        
        <ListPreference
            android:title="@string/vibrationmode"
            android:key="vibrationmode"
            android:summary="@string/vibrationmode_summary"
            android:defaultValue="default"
            android:entries="@array/vibrationmodeentries"
            android:entryValues="@array/vibrationmodeentryvalues"
        />
        <CheckBoxPreference
            android:title="@string/vibrateoncall"
            android:key="vibrateoncall"
            android:summary="@string/vibrateoncall_summary"
            android:defaultValue="true"
            />
        <ListPreference
            android:title="@string/interval"
            android:key="interval"
            android:summary="@string/interval_summary"
            android:defaultValue="0"
            android:entries="@array/intervalentries"
            android:entryValues="@array/intervalentryvalues"
        />
        <ListPreference
            android:title="@string/repeats"
            android:key="repeats"
            android:summary="@string/repeats_summary"
            android:defaultValue="10"            
            android:entries="@array/repeatsentries"
            android:entryValues="@array/repeatsentryvalues"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_visible">
        <CheckBoxPreference
            android:title="@string/visible"
            android:key="visible"
            android:summary="@string/visible_summary"
            android:defaultValue="true"
            />
        <com.jonasl.gmailnotifier2.IconListPreference
            android:title="@string/nicon"
            android:key="nicon"
            android:summary="@string/nicon_summary"
            android:defaultValue="nicon_20"
            android:entries="@array/niconentries"
            android:entryValues="@array/niconentryvalues"
            android:dependency="visible"
        />
        <CheckBoxPreference
            android:title="@string/gmstylefirst"
            android:key="gmstylefirst"
            android:summary="@string/gmstylefirst_summary"
            android:defaultValue="true"
            android:dependency="visible"
            />
        <CheckBoxPreference
            android:title="@string/gmstylefirstm"
            android:key="gmstylefirstm"
            android:summary="@string/gmstylefirstm_summary"
            android:defaultValue="true"
            android:dependency="gmstylefirst"
            />
        <ListPreference
            android:title="@string/ledmode"
            android:key="ledmode"
            android:summary="@string/ledmode_summary"
            android:defaultValue="blink"
            android:entries="@array/ledmodeentries"
            android:entryValues="@array/ledmodeentryvalues"
            android:dependency="visible"
        />
        <ListPreference
            android:title="@string/ledcolor"
            android:key="ledcolor"
            android:summary="@string/ledcolor_summary"
            android:defaultValue="green"
            android:entries="@array/ledcolorentries"
            android:entryValues="@array/ledcolorentryvalues"
            android:dependency="visible"
        />            
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cat_schedule">
        <CheckBoxPreference
            android:title="@string/schedule"
            android:key="schedule"
            android:summary="@string/schedule_summary"
            android:defaultValue="false"
            />
        <PreferenceScreen
            android:title="@string/schedulestart"
            android:key="schedulestart"
            android:dependency="schedule"
            />
        <PreferenceScreen
            android:title="@string/schedulestop"
            android:key="schedulestop"
            android:dependency="schedule"
            />
        <CheckBoxPreference
            android:title="@string/schedulering"
            android:key="schedulering"
            android:defaultValue="true"
            android:dependency="schedule"
            />
        <CheckBoxPreference
            android:title="@string/schedulevibration"
            android:key="schedulevibration"
            android:defaultValue="true"
            android:dependency="schedule"
            />
        <CheckBoxPreference
            android:title="@string/scheduleled"
            android:key="scheduleled"
            android:defaultValue="true"
            android:dependency="schedule"
            />
    </PreferenceCategory>
</PreferenceScreen>
